syntax = "proto3";

package cart;

option go_package = "./pkg/pb";

service CartService {
  rpc GetCart (GetCartRequest) returns (GetCartResponse);
  rpc AddToCart (AddToCartRequest) returns (AddToCartResponse);
  rpc RemoveFromCart (RemoveFromCartRequest) returns (RemoveFromCartResponse);
}

message GetCartRequest {
  int64 user_id = 1;
}

message GetCartResponse {
  string message = 1;
  repeated CartItem items = 2;
}

message AddToCartRequest {
  int64 user_id = 1;
  int64 product_id = 2;
  int64 quantity = 3;
}

message AddToCartResponse {
  string message = 1;
}

message RemoveFromCartRequest {
  int64 user_id = 1;
  int64 product_id = 2;
}

message RemoveFromCartResponse {
  string message = 1;
}

message CartItem {
  int64 product_id = 1;
  string product_name = 2;
  double price = 3;  // Changed to double for price
  int64 quantity = 4;
}
