
syntax = "proto3";

package product;

option go_package = "./pkg/pb";

service ProductService {
  rpc FindAll (FindAllRequest) returns (FindAllResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
}

message FindAllRequest {}

message FindAllResponse {
  repeated Product products = 1;
}

message FindOneRequest { int64 id = 1; }

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

message FindOneData {
  int64 id = 1;
  string name = 2;
  int64 stock = 3;
  double price = 4;
}

message Product {
  int64 id = 1;
  string name = 2;
  int64 stock =3;
  string description = 4;
  string status =5;
  double price = 6;
}

message DecreaseStockRequest {
  int64 id = 1;
  int64 orderId = 2;
}

message DecreaseStockResponse {
  int64 status = 1;
  string error = 2;
}